--- a/templates/home.html
+++ b/templates/home.html
@@ -358,8 +358,8 @@ span.psw {
             <div id="menu" class="bor"> 
             	<ul id="tmenu" class="bor">
                 	<li> HOME</li>
-                    <li> ARTICLES</li>
-                    <li> LEARNING</li>
+                    <li> BLOG</li>
+                    <li> WEBINARS</li>
 					<li> CONSULTING</li>
 					<li> OUR WORK</li>
                 </ul>
@@ -509,7 +509,14 @@ window.onclick = function(event) {
     }
 }
 </script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/7.14.6/firebase-app.js"></script>
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
 
 
 </body>
