this is my third commit

--- a/templates/home.html
+++ b/templates/home.html
@@ -357,7 +357,7 @@ span.psw {
         	
             <div id="menu" class="bor"> 
             	<ul id="tmenu" class="bor">
-                	<li> HOME</li>
+                	<li> SERVICES</li>
                     <li> BLOG</li>
                     <li> WEBINARS</li>
 					<li> CONSULTING</li>
