All linked webinar, home, work, consulting

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 	#ttmenu{
 		list-style:none;
 		margin-left:0px;
-		background-color:#03577e;
+		background-color:#078fce;
         }
 		
 	#ttmenu	li {
@@ -37,9 +37,9 @@
         <ul id="ttmenu" class="bor">
             <a href="{% url 'home' %}"><li> SERVICES</li></a>
             <a href="{% url 'about' %}"><li> ABOUT</li></a>
-            <a href="{% url 'home' %}"><li> WEBINARS</li></a>>
-            <a href="{% url 'home' %}"><li> CONSULTING</li></a>
-            <a href="{% url 'home' %}"><li> OUR WORK</li></a>
+            <a href="{% url 'webinar' %}"><li> WEBINARS</li></a>
+            <a href="{% url 'consulting' %}"><li> CONSULTING</li></a>
+            <a href="{% url 'work' %}"><li> OUR WORK</li></a>
         </ul>
     </div>
 </header>
