--- a/templates/home.html
+++ b/templates/home.html
@@ -357,16 +357,16 @@ span.psw {
             	<div id="advtxt"> PRODUCT MANAGER GROWTH HACKS </div>
             </div>
         	
-            <div id="menu" class="bor"> 
+			 <div id="menu" class="bor"> 
             	<ul id="tmenu" class="bor">
                 	<a href="{% url 'home' %}"><li> SERVICES</li></a>
                     <a href="{% url 'about' %}"><li> ABOUT</li></a>
-                    <a href="{% url 'home' %}"><li> WEBINARS</li></a>>
+                    <a href="{% url 'home' %}"><li> WEBINARS</li></a>
 					<a href="{% url 'home' %}"><li> CONSULTING</li></a>
 					<a href="{% url 'home' %}"><li> OUR WORK</li></a>
                 </ul>
             </div>
-            
+		
             <div id="sky" class="bor">
             
 				<div id="bodyimg" class="bor"> </div>
